Fix alignment issues

--- a/rinfox/Profile Folder/chrome/_menuitems.css
+++ b/rinfox/Profile Folder/chrome/_menuitems.css
@@ -234,7 +234,6 @@
 
 #cBHelpMenuButton {
   padding-left: 4px !important;
-  margin-right: 9px !important;
 }
 @media (-moz-windows-classic) {
   #cBHelpMenuButton {
